--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
     <section class="showcase">
         <div class="container grid">
             <div class="showcase-text">
-                <h1>Easier Deployment</h1>
-                <p>Deploy web applications of all kinds, from large scale enterprise APIs to static websites for individuals. Fill out this form to request a demo of our services.</p>
+                <h1 class="lg">Easier Deployment</h1>
+                <p class="lead">Deploy web applications of all kinds, from large scale enterprise APIs to static websites for individuals. Fill out this form to request a demo of our services.</p>
                 <a href="features.html" class="btn btn-outline">Read More</a>
             </div>
 
@@ -84,7 +84,7 @@
     </section>
 
     <!-- CLI -->
-    <section class="cli">
+    <section class="cli py-5">
         <div class="container grid">
             <img src="images/cli.png" alt="cli_image">
             <div class="card">
@@ -92,6 +92,55 @@
             </div>
             <div class="card">
                 <h3>Deploy in seconds</h3>
+            </div>
+        </div>
+    </section>
+
+    <!-- Cloud section -->
+    <section class="cloud bg-primary py-5">
+        <div class="container grid">
+            <div class="text-center">
+                <h2 class="lg">Extreme Cloud Hosting</h2>
+                <p class="lead my-1">Cloud hosting like you've never seen, fast, efficient and scalable</p>
+                <a href="#" class="btn btn-dark">Read More</a>
+            </div>
+            <img src="images/cloud.png" alt="cloud_icon">
+        </div>
+    </section>
+
+    <!-- Languages -->
+    <section class="languages py-5">
+        <h2 class="md text-center my-2">
+            Supported languages
+        </h2>
+        <div class="container flex">
+            <div class="card">
+                <h4>Node.js</h4>
+                <img src="images/logos/node.png" alt="nodejs">
+            </div>
+            <div class="card">
+                <h4>Python</h4>
+                <img src="images/logos/python.png" alt="python">
+            </div>
+            <div class="card">
+                <h4>C#</h4>
+                <img src="images/logos/csharp.png" alt="csharp">
+            </div>
+            <div class="card">
+                <h4>Ruby</h4>
+                <img src="images/logos/ruby.png" alt="ruby">
+            </div>
+            <div class="card">
+                <h4>PHP</h4>
+                <img src="images/logos/php.png" alt="php">
+            </div>
+            <div class="card">
+                <h4>Scala</h4>
+                <img src="images/logos/scala.png" alt="scala">
+            </div>
+            <div class="card">
+                <h4>Clojure</h4>
+                <img src="images/logos/clojure.png" alt="clojure">
             </div>
         </div>
     </section>
