--- a/index.html
+++ b/index.html
@@ -144,5 +144,45 @@
             </div>
         </div>
     </section>
+
+    <!--  Footer  -->
+    <footer class="footer bg-dark py-5">
+        <div class="container grid grid-3">
+            <div class="">
+                <h1>Euroku</h1>
+                <p>Copyright &copy; <span id="footerDate"></span></p>
+            </div>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="index.html">Home</a>
+                    </li>
+                    <li>
+                        <a href="features.html">Features</a>
+                    </li>
+                    <li>
+                        <a href="docs.html">Docs</a>
+                    </li>
+                </ul>
+            </nav>
+
+            <div class="socials">
+                <a href="#">
+                    <i class="fab fa-github fa-2x"></i>
+                </a>
+                <a href="#">
+                    <i class="fab fa-facebook fa-2x"></i>
+                </a>
+                <a href="#">
+                    <i class="fab fa-instagram fa-2x"></i>
+                </a>
+                <a href="#">
+                    <i class="fab fa-twitter fa-2x"></i>
+                </a>
+            </div>
+        </div>
+    </footer>
+
+    <script src="js/app.js"></script>
 </body>
 </html>
