--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </div>
 
             <div class="showcase-form card">
-                <h2>Request a demo</h2>
+                <h2 class="text-center">Request a demo</h2>
                 <form>
                     <div class="form-control">
                         <input type="text" name="name" placeholder="Name" required>
