completed the features and docs templates

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="index.html">Home</a>
+                        <a href="index.html" class="active">Home</a>
                     </li>
                     <li>
                         <a href="features.html">Features</a>
                     </li>
                     <li>
-                        <a href="docs.html">Docs</a>
+                        <a href="docs.html">Documentation</a>
                     </li>
                 </ul>
             </nav>
@@ -50,7 +50,7 @@
                     <div class="form-control">
                         <input type="text" name="email" placeholder="Email" required>
                     </div>
-                    <input type="submit" value="Send" class="btn btn-primary">
+                    <input type="submit" value="Send" class="btn btn-secondary">
                 </form>
             </div>
         </div>
@@ -161,7 +161,7 @@
                         <a href="features.html">Features</a>
                     </li>
                     <li>
-                        <a href="docs.html">Docs</a>
+                        <a href="docs.html">Documentation</a>
                     </li>
                 </ul>
             </nav>
